<resources>
    <string name="app_name">Sway</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="remember_password">Remember Password</string>
    <string name="ask_for_signUp">Not a member? SignUp Now</string>
    <string name="name">Name</string>
    <string name="conpassword">Confirm Password</string>
    <string name="next">Next</string>
    <string name="age">Select Age</string>
    <string-array name="ages">
        <item>2-20</item>
        <item>20 and above</item>
    </string-array>
    <string name="height">Height(in cm)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight(in kg)</string>
    <string name="signUp">SignUp</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="suggestions">Suggestions</string>
    <string name="bmi">BMI</string>
    <string name="homepage">This is home page</string>
    <string name="suggestionspage">This is suggestions Page</string>
    <string name="profilepage">This is profile page</string>
    <string name="bmichartpage">This is bmi page</string>
    <string name="gender">Gender</string>
    <string name="col1">BMI</string>
    <string name="col2">Nutritional Status</string>
    <string name="row1bmi">Below 18.5</string>
    <string name="row1status">Underweight</string>
    <string name="row2bmi">18.5 - 24.9</string>
    <string name="row2status">Normal Weight</string>
    <string name="row3bmi">25.0 - 29.9</string>
    <string name="row3status">Pre-Obesity</string>
    <string name="row4bmi">30.0 - 34.5</string>
    <string name="row4status">Obesity Class-1</string>
    <string name="row5bmi">35.0 - 39.9</string>
    <string name="row5status">Obesity Class-2</string>
    <string name="row6bmi">Above 40</string>
    <string name="row6status">Obesity Class-3</string>
    <string name="save">Save</string>
    <string name="choose_age">Choose Age:</string>
    <string name="colu1">Day</string>
    <string name="colu2">Meals</string>
    <string name="colu3">Menu</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="sugg1">Suggestion1</string>
    <string name="sugg2">Suggestion2</string>
    <string name="sugg3">Suggestion3</string>
    <string name="create_sugg">Create your own plan</string>
    <string name="apply">Apply</string>
    <string name="mysugg">My Plan</string>
    <string name="nothing">You have to add plan</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="send_notifications">Send Notifications</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="notification">Notificationnnnnn</string>
    <string name="notification_channel_description">This is a notification u understanddddd</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Snacks">Snacks</string>
    <string name="Dinner">Dinner</string>
    <string name="saveandapply">Save And Apply</string>
    <string name="sendmail">Send Mail</string>
    <string name="input">(in gms)</string>
    <string name="enter">Enter your daily food consumed</string>
    <string name="graph">View your performance</string>
    <string name="feedback">Write your Feedback</string>
    <string name="send">Send</string>

    <!--    <string name="breakfast">BreakFast</string>-->
    <!--    <string name="lunch">Lunch</string>-->
    <!--    <string name="snacks">Snacks</string>-->
    <!--    <string name="dinner">Dinner</string>-->

</resources>