<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <androidx.appcompat.widget.Toolbar

            android:id="@+id/toolbar_login"
            android:layout_width="166dp"
            android:layout_height="101dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="134dp"
            android:layout_marginEnd="111dp"
            android:layout_marginTop="48dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084"
            app:title="      Login"
            app:titleTextColor="#000000" />

        <EditText

            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_login"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp" />

        <EditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginStart="20dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="20dp" />

        <TextView

            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginStart="20dp"
            android:layout_marginTop="43dp"
            android:text="@string/forgot_password"
            android:textColor="#8F8686"
            android:textSize="15sp" />

        <Button

            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/forgot_password"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="20dp"
            android:background="#4F5EAE"
            android:enabled="true"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView

            android:id="@+id/askforsignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/ask_for_signUp"
            android:textColor="#8F8686"
            android:textSize="15sp"
            app:backgroundTint="@color/colorwhiteblueshade" />

        <CheckBox

            android:id="@+id/remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="133dp"
            android:layout_marginRight="20dp"
            android:checked="false"
            android:text="@string/remember_password"
            android:textSize="12sp" />


    </RelativeLayout>